# JAAM

./: .gitignore  CMakeLists.txt
cmake/: commonmacros.txt
converter/: CMakeLists.txt
converter/src/: main.cpp  modelConverter.cpp
lib/: CMakeLists.txt
lib/include/: assetFile.h  assetMaterial.h  assetModel.h  assetTexture.h  jaam.h
lib/include/core/: assetBuffer.h  assetHandle.h  assetManager.h
lib/src/: assetFile.cpp  assetMaterial.cpp  assetModel.cpp  assetTexture.cpp
lib/src/core/: assetBuffer.cpp  assetHandle.cpp  assetManager.cpp
